[project]
name = "pyintelbras"
version = "0.0.1"
authors = [{ name = "Wilton Rodrigues", email = "wiltonsr94@gmail.com" }]
description = "Python Wrapper for Intelbras API"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wiltonsr/PyIntelbras"
Issues = "https://github.com/wiltonsr/PyIntelbras/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
